tests/snapshots/medium/tests__3color_k4_unsat.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - dpll/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
unsatisfiable

----- stderr -----

Interactions
  Total              317_977
    Depth            137_852
    Breadth                2
  Annihilate         174_304
  Commute              1_989
  Copy                33_232
  Erase               38_871
  Expand              25_090
  Call                28_123
  Branch              16_368

Memory
  Heap                37_088 B
  Allocated        6_965_488 B
  Freed            6_965_488 B

[Performance...]
