tests/snapshots/medium/tests__exactly_one_five_forced.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - dpll/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
satisfiable
evaluation under model: true
var 1 = false
var 2 = false
var 3 = true
var 4 = false
var 5 = false

----- stderr -----

Interactions
  Total               77_745
    Depth             34_762
    Breadth                2
  Annihilate          41_536
  Commute                777
  Copy                 8_689
  Erase                9_818
  Expand               6_127
  Call                 6_836
  Branch               3_962

Memory
  Heap                17_712 B
  Allocated        1_686_576 B
  Freed            1_686_576 B

[Performance...]
