tests/snapshots/medium/tests__horn_unsat.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - sat/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
unsatisfiable

----- stderr -----

Interactions
  Total               15_164
    Depth              7_211
    Breadth                2
  Annihilate           7_725
  Commute                166
  Copy                 1_931
  Erase                2_024
  Expand               1_150
  Call                 1_416
  Branch                 752

Memory
  Heap                 3_744 B
  Allocated          321_328 B
  Freed              321_328 B

[Performance...]
