tests/snapshots/medium/tests__imp_cycle_single_solution.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - dpll/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
satisfiable
evaluation under model: true
var 1 = true
var 2 = true
var 3 = true

----- stderr -----

Interactions
  Total               20_756
    Depth              9_226
    Breadth                2
  Annihilate          10_804
  Commute                192
  Copy                 2_400
  Erase                2_701
  Expand               1_661
  Call                 1_948
  Branch               1_050

Memory
  Heap                 6_416 B
  Allocated          443_664 B
  Freed              443_664 B

[Performance...]
