tests/snapshots/medium/tests__imp_cycle_single_solution_stderr.snap
---
source: tests/tests.rs
expression: stderr
---
Interactions
  Total               21_053
    Depth              9_295
    Breadth                2
  Annihilate          10_935
  Commute                203
  Copy                 2_430
  Erase                2_756
  Expand               1_691
  Call                 1_968
  Branch               1_070

Memory
  Heap                 6_656 B
  Allocated          449_312 B
  Freed              449_312 B

[Performance...]
