tests/snapshots/medium/tests__imp_cycle_single_solution_stdout.snap
---
source: tests/tests.rs
expression: stdout
---
satisfiable
evaluation under model: true
var 1 = true
var 2 = true
var 3 = true
